# Geothermal-fluid-flow-and-pressure-temperature-

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
docs/: METHODOLOGY.md
figures/: feed_zones.csv
notebooks/: Geothermal_Well_Test_Worked_Example.ipynb
scripts/: run_analysis.py
src/geothermal_welltest/: __init__.py  cli.py  config.py  feedzones.py  io_utils.py  plotting.py  spinner.py  steam_tables.py  temperature.py
tests/: test_spinner.py  test_steam_tables.py
